# Protocol-Buffer-Examples

./: .gitmodules  CMakeLists.txt  README.md  testing_concat.csv  visualizer.py
apps/: CMakeLists.txt
apps/detection_publisher/: CMakeLists.txt  detection_publisher.cpp
apps/detection_publisher/include/: frame_conversions.h
apps/detection_publisher/src/: detection_publisher.cpp  frame_conversions.cpp
examples/: CMakeLists.txt
examples/detection_publisher/: CMakeLists.txt  detection_publisher.cpp
lib/: CMakeLists.txt
logs/: Mon Jul  4 21:22:32 2022 success.csv  another_perfect_static.csv  bear_compensator_height_equalised.csv  bear_y_compensator.csv  bear_y_compensator_height_offset_closer.csv  bear_y_compensator_offset.csv  big_data_collection_bear.csv  big_data_collection_bottle.csv  big_data_collection_bottle_uncompensated.csv  bottle_copmensator_data_collection_y0.csv  flight_1.csv  flight_2csv  good_loc_even_error.csv  good_loc_y_error.csv  offset_yaw90.csv  y_compensator.csv
logs/bottle_-15_-05_05/: test.csv
logs/bottle_-15_-05_125/: test.csv
logs/bottle_-15_05_125/: test2.csv
logs/bottle_-15_0_05/: test.csv
logs/bottle_-1_-05_05/: test.csv
logs/bottle_-1_05_05/: test.csv
logs/bottle_-1_0_05/: bottle_static_1m.csv
logs/bottle_-2_-05_5/: test.csv
logs/bottle_0_1_1_flying/: 1.csv  4.csv  8.csv
logs/final/: flight_precise_detectioncsv
logs/final_static/: bottle_great_0075_-120_110.csv  bottle_sub_1cmxy.csv  flight_0_125_1.csv
protos/: CMakeLists.txt  detection_msg.proto
